--- a/docs/_sass/minima.scss
+++ b/docs/_sass/minima.scss
@@ -2,7 +2,7 @@
 
 // Define defaults for each variable.
 
-$base-font-family: "Monaco", sans-serif;
+$base-font-family: "PT Mono", serif;
 $base-font-size:   16px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
