--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -7,20 +7,16 @@
 		
 		<div class="footer-col-wrapper">
 			<div class="footer-col footer-col-1">
-				<img src="/assets/Logo_Fisk_Circle.png" alt="Handritad fisk med ben" width="100">
-			</div>
-
-			<div class="footer-col footer-col-2">
 				<ul class="contact-list">
-					{%- if site.email -%}
-					<li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-					{%- endif -%}
 					{%- include social.html -%}
 					</ul>
 			</div>
 
+			<div class="footer-col footer-col-2">
+			</div>
+
 			<div class="footer-col footer-col-3">
-				<p>Powered by <a href="https://jekyllrb.com">Jekyll</a></p>
+				&ensp;<img src="/assets/Logo_Fisk_Trans.png" alt="Handritad fisk med ben" width="120" style="float: right;">
 			</div>
 		</div>
 	</div>
