--- a/docs/_includes/footer/custom.html
+++ b/docs/_includes/footer/custom.html
@@ -1,5 +1,5 @@
 <!-- start custom footer snippets -->
 
-<img src="../assets/logo_fisk_trans.png/" width="100" style="float:right"> 
+<img src="../assets/logo_fisk_trans.png" width="100" style="float:right"> 
 
 <!-- end custom footer snippets -->
